--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Gavin!</h1>
-				<p>I'm best known as the Hei8-sama in <em>the game Dota 2</em> Don't trust me. <a href="/about">Read more about me</a></p>
+				<p>I'm best known as the Hei8-sama in <em>the game Dota 2</em> 
+					<span style="font-size:8px;">Just kidding...</span><a href="/about">Read more about me</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
