--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Gavin!</h1>
-				<p>I'm best known as the Hei8-sama in the MOBA game <a href="http://www.dota2.com"><em>Dota 2</em></a> 
-					<span style="font-size:8px;">Just kidding... </span><a href="/about">Read more about me</a></p>
+				<p>I am a passionate <a href="http://www.dota2.com"><em>Dota 2</em></a> and <a href="https://playhearthstone.com"><em>Hearthstone</em></a> player best known as the 5K noob and an Arena Maniac   
+					<span style="font-size:8px;"> (2x Arena Leaderboard - Top 100 NA) </span><a href="/about"></p>
+			<p>Read more about me</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
