--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	        	<li><a href="/about.html">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
+			<li><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
     		</ul>
 		</nav>
 		<div class="container">
