--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -11,7 +11,7 @@
                 
                 <table>
                     <tr>
-                        <td class="required">A</td>
+                        <td class="required">原先购买税前价格</td>
                         <td><input type="text" id="A"></td>
                     </tr>
                     <tr>
