--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Price Calculator</title>
+		<title>价格计算器</title>
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	<body>
@@ -10,44 +10,47 @@
                 <h1>Price Calculator</h1>
                 
                 <table>
+		    <tr>
+                        <td class="required">红色必须填写</td>
+                    </tr>
                     <tr>
-                        <td class="required">原先购买税前价格</td>
+                        <td class="required">原先购买税前价格(Cost)</td>
                         <td><input type="text" id="A"></td>
                     </tr>
                     <tr>
-                        <td class="required">B</td>
+                        <td class="required">原先销售税前价格(Sale)</td>
                         <td><input type="text" id="B"></td>
                     </tr>
                     <tr>
-                        <td>C</td>
+                        <td>原先的利润($)</td>
                         <td><input type="text" id="C"></td>
                     </tr>
                     <tr>
-                        <td>D</td>
+                        <td>原先的利润率(1.00=100%)</td>
                         <td><input type="text" id="D"></td>
                     </tr>
                     <tr>
-                        <td>E</td>
+                        <td>销售涨价幅度($)</td>
                         <td><input type="text" id="E"></td>
                     </tr>
                     <tr>
-                        <td class="required">F</td>
+                        <td class="required">涨价后的购买税前价格(Cost)</td>
                         <td><input type="text" id="F"></td>
                     </tr>
                     <tr>
-                        <td>G</td>
+                        <td>涨价后的销售税前价格(Sale)</td>
                         <td><input type="text" id="G"></td>
                     </tr>
                     <tr>
-                        <td>H</td>
+                        <td>涨价后的销售税后价格</td>
                         <td><input type="text" id="H"></td>
                     </tr>
                     <tr>
-                        <td>I</td>
+                        <td>涨价后的利润($)</td>
                         <td><input type="text" id="I"></td>
                     </tr>
                     <tr>
-                        <td>J</td>
+                        <td>涨价后的利润率(1.00=100%)</td>
                         <td><input type="text" id="J"></td>
                     </tr>
                 </table><br>
