--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -95,16 +95,16 @@
             }
 
             function init(){
-                a = parseInt(document.getElementById("A").value);
-                b = parseInt(document.getElementById("B").value);
-                c = parseInt(document.getElementById("C").value);
-                d = parseInt(document.getElementById("D").value);
-                e = parseInt(document.getElementById("E").value);
-                f = parseInt(document.getElementById("F").value);
-                g = parseInt(document.getElementById("G").value);
-                h = parseInt(document.getElementById("H").value);
-                i = parseInt(document.getElementById("I").value);
-                j = parseInt(document.getElementById("J").value);
+                a = parseFloat(document.getElementById("A").value);
+                b = parseFloat(document.getElementById("B").value);
+                c = parseFloat(document.getElementById("C").value);
+                d = parseFloat(document.getElementById("D").value);
+                e = parseFloat(document.getElementById("E").value);
+                f = parseFloat(document.getElementById("F").value);
+                g = parseFloat(document.getElementById("G").value);
+                h = parseFloat(document.getElementById("H").value);
+                i = parseFloat(document.getElementById("I").value);
+                j = parseFloat(document.getElementById("J").value);
 
                 if(isNaN(i) && isNaN(j)){
                     calculateAll(0);
