--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -160,7 +160,7 @@
                         j = (g - f)/f;
                     }
                 }else{
-                    alert("请输入涨价幅度【或者】涨价后的价格(二选一)");
+                    //alert("请输入涨价幅度【或者】涨价后的价格(二选一)");
                 }
             }
 
