C and D are now read-only

--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -27,11 +27,11 @@
                     </tr>
                     <tr>
                         <td>原先的利润($)</td>
-                        <td><input type="text" id="C"></td>
+                        <td><input type="text" id="C" readonly></td>
                     </tr>
                     <tr>
                         <td>原先的利润率(1.00=100%)</td>
-                        <td><input type="text" id="D"></td>
+                        <td><input type="text" id="D" readonly></td>
                     </tr>
                     <tr>
                         <td>销售涨价幅度($)</td>
