--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -26,12 +26,12 @@
                         <td><input type="text" id="B"></td>
                     </tr>
                     <tr>
-                        <td>原先的利润($)</td>
-                        <td><input type="text" id="C" readonly></td>
+                        <td class="required">原先的利润($)</td>
+                        <td class="required"><input type="text" id="C" readonly></td>
                     </tr>
                     <tr>
-                        <td>原先的利润率(1.00=100%)</td>
-                        <td><input type="text" id="D" readonly></td>
+                        <td class="required">原先的利润率(1.00=100%)</td>
+                        <td class="required"><input type="text" id="D" readonly></td>
                     </tr>
                     <tr>
                         <td>销售涨价幅度($)</td>
