minior color fix

--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -27,11 +27,11 @@
                     </tr>
                     <tr>
                         <td class="readonly">原先的利润($)</td>
-                        <td><input type="text" class="readonly" id="C" readonly></td>
+                        <td><input type="text" class="readonly-box" id="C" readonly></td>
                     </tr>
                     <tr>
                         <td class="readonly">原先的利润率(1.00=100%)</td>
-                        <td><input type="text" class="readonly" id="D" readonly></td>
+                        <td><input type="text" class="readonly-box" id="D" readonly></td>
                     </tr>
                     <tr>
                         <td>销售涨价幅度($)</td>
