--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -10,13 +10,9 @@
                 <h1>价格计算器</h1>
                 
                 <table>
-		    <tr>
+		            <tr class="spaceUnder">
                         <td class="required">***红色必须填写</td>
-                    </tr>
-		    <tr>
-                        <td></td>
-                    </tr>
-			
+                    </tr>			
                     <tr>
                         <td class="required">原先购买税前价格(Cost)</td>
                         <td><input type="text" id="A"></td>
