--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -10,7 +10,7 @@
                 <h1>价格计算器</h1>
                 
                 <table>
-		            <tr class="spaceUnder">
+		            <tr style="padding-bottom: 5em;">
                         <td class="required">***红色必须填写</td>
                     </tr>			
                     <tr>
