--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -10,9 +10,10 @@
                 <h1>价格计算器</h1>
                 
                 <table>
-		            <tr style="padding-bottom: 5em;">
+		            <tr>
                         <td class="required">***红色必须填写</td>
-                    </tr>			
+                    </tr>
+                    <tr class="spacer"></tr>			
                     <tr>
                         <td class="required">原先购买税前价格(Cost)</td>
                         <td><input type="text" id="A"></td>
