--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -15,45 +15,45 @@
                     </tr>
                     <tr class="spacer"></tr>			
                     <tr>
-                        <td class="required">原先购买税前价格(Cost)</td>
+                        <td class="required">A.原先购买税前价格(Cost)</td>
                         <td><input type="text" id="A"></td>
                     </tr>
                     <tr>
-                        <td class="required">原先销售税前价格(Sale)</td>
+                        <td class="required">B.原先销售税前价格(Sale)</td>
                         <td><input type="text" id="B"></td>
                     </tr>
                     <tr>
-                        <td class="required">涨价后的购买税前价格(Cost)</td>
+                        <td class="required">F.涨价后的购买税前价格(Cost)</td>
                         <td><input type="text" id="F"></td>
                     </tr>
 
                     <tr>
-                        <td class="readonly">原先的利润($)</td>
+                        <td class="readonly">C.原先的利润($)</td>
                         <td><input type="text" class="readonly-box" id="C" readonly></td>
                     </tr>
                     <tr>
-                        <td class="readonly">原先的利润率(1.00=100%)</td>
+                        <td class="readonly">D.原先的利润率(1.00=100%)</td>
                         <td><input type="text" class="readonly-box" id="D" readonly></td>
                     </tr>
                     <tr>
-                        <td class="option1">销售涨价幅度($)</td>
+                        <td class="option1">E.销售涨价幅度($)</td>
                         <td><input type="text" id="E"></td>
                     </tr>
                     
                     <tr>
-                        <td class="option1">涨价后的销售税前价格(Sale)</td>
+                        <td class="option1">G.涨价后的销售税前价格(Sale)</td>
                         <td><input type="text" id="G"></td>
                     </tr>
                     <tr>
-                        <td class="option1">涨价后的销售税后价格</td>
+                        <td class="option1">H.涨价后的销售税后价格</td>
                         <td><input type="text" id="H"></td>
                     </tr>
                     <tr>
-                        <td class="option2">涨价后的利润($)</td>
+                        <td class="option2">I.涨价后的利润($)</td>
                         <td><input type="text" id="I"></td>
                     </tr>
                     <tr>
-                        <td class="option2">涨价后的利润率(1.00=100%)</td>
+                        <td class="option2">J.涨价后的利润率(1.00=100%)</td>
                         <td><input type="text" id="J"></td>
                     </tr>
                 </table><br>
