--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -13,7 +13,7 @@
 		            <tr>
                         <td class="required">***红色必须填写</td>
                     </tr>
-                    <tr class="spacer"></tr>			
+                    <tr><td><div class="spacer"></div></td></tr>			
                     <tr>
                         <td class="required">A.原先购买税前价格(Cost)</td>
                         <td><input type="text" id="A"></td>
