--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -13,7 +13,8 @@
 		            <tr>
                         <td class="required">***红色必须填写</td>
                     </tr>
-                    <tr><td><div class="spacer"></div></td></tr>			
+                    <tr class="spacer"></tr>		
+                    	
                     <tr>
                         <td class="required">A.原先购买税前价格(Cost)</td>
                         <td><input type="text" id="A"></td>
@@ -34,6 +35,11 @@
                     <tr>
                         <td class="readonly">D.原先的利润率(1.00=100%)</td>
                         <td><input type="text" class="readonly-box" id="D" readonly></td>
+                    </tr>
+                    <tr class="spacer"></tr>
+
+                    <tr>
+                        <td class="hint">避免计算冲突：以下蓝绿组只能填写一组，一组只能填写一个数字</td>
                     </tr>
                     <tr>
                         <td class="option1">E.销售涨价幅度($)</td>
