--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -39,8 +39,12 @@
                     <tr class="spacer"></tr>
 
                     <tr>
-                        <td class="hint">避免计算冲突：以下蓝绿组只能填写一组，一组只能填写一个数字</td>
+                        <td class="hint">***避免计算冲突：</td>
                     </tr>
+                    <tr>
+                        <td class="hint">以下蓝绿组只能填写一组，一组只能填写一个数字</td>
+                    </tr>
+
                     <tr>
                         <td class="option1">E.销售涨价幅度($)</td>
                         <td><input type="text" id="E"></td>
