--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -42,7 +42,10 @@
                         <td class="hint">***避免计算冲突：</td>
                     </tr>
                     <tr>
-                        <td class="hint">以下蓝绿组只能填写一组，一组只能填写一个数字</td>
+                        <td class="hint">以下蓝绿组只能填写一组</td>
+                    </tr>
+                    <tr>
+                        <td class="hint">一组只能填写一个数字</td>
                     </tr>
 
                     <tr>
