--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -113,6 +113,7 @@
                 //alert(isNaN(e) + isNaN(g) + isNaN(h) + isNaN(i) + isNaN(j));
                 if((isNaN(e) + isNaN(g) + isNaN(h) + isNaN(i) + isNaN(j)) != 4){
                     alert("请确认E, G, H, I , J只填选一项");
+                    return;
                 }
 
                 if(isNaN(i) && isNaN(j)){
