--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -88,8 +88,8 @@
             function clearAll(){
                 document.getElementById("A").value = '';
                 document.getElementById("B").value = '';
-                document.getElementById("C").value = '';
-                document.getElementById("D").value = '';
+                document.getElementById("C").value = '自动计算';
+                document.getElementById("D").value = '自动计算';
                 document.getElementById("E").value = '';
                 document.getElementById("F").value = '';
                 document.getElementById("G").value = '';
