label and colour

--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -30,11 +30,11 @@
 
                     <tr>
                         <td class="readonly">C.原先的利润($)</td>
-                        <td><input type="text" class="readonly-box" id="C" readonly></td>
+                        <td><input type="text" class="readonly-box" id="C" value="自动计算" readonly></td>
                     </tr>
                     <tr>
                         <td class="readonly">D.原先的利润率(1.00=100%)</td>
-                        <td><input type="text" class="readonly-box" id="D" readonly></td>
+                        <td><input type="text" class="readonly-box" id="D" value="自动计算" readonly></td>
                     </tr>
                     <tr class="spacer"></tr>
 
@@ -46,24 +46,24 @@
                     </tr>
 
                     <tr>
-                        <td class="option1">E.销售涨价幅度($)</td>
+                        <td>E.销售涨价幅度($)</td>
                         <td><input type="text" id="E"></td>
                     </tr>
                     
                     <tr>
-                        <td class="option1">G.涨价后的销售税前价格(Sale)</td>
+                        <td>G.涨价后的销售税前价格(Sale)</td>
                         <td><input type="text" id="G"></td>
                     </tr>
                     <tr>
-                        <td class="option1">H.涨价后的销售税后价格</td>
+                        <td>H.涨价后的销售税后价格</td>
                         <td><input type="text" id="H"></td>
                     </tr>
                     <tr>
-                        <td class="option2">I.涨价后的利润($)</td>
+                        <td>I.涨价后的利润($)</td>
                         <td><input type="text" id="I"></td>
                     </tr>
                     <tr>
-                        <td class="option2">J.涨价后的利润率(1.00=100%)</td>
+                        <td>J.涨价后的利润率(1.00=100%)</td>
                         <td><input type="text" id="J"></td>
                     </tr>
                 </table><br>
