--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -38,12 +38,10 @@
                     </tr>
                     <tr class="spacer"></tr>
 
-                    <tr>
-                        <td class="hint">***避免计算冲突：</td>
+                    <tr col-span=2>
+                        <td class="hint">***避免计算冲突：以下五项只可填选一项</td>
                     </tr>
-                    <tr>
-                        <td class="hint">以下五项只可填选一项</td>
-                    </tr>
+                    <tr class="spacer"></tr>
 
                     <tr>
                         <td>E.销售涨价幅度($)</td>
