--- a/cost_calculator/costcalc.html
+++ b/cost_calculator/costcalc.html
@@ -38,8 +38,8 @@
                     </tr>
                     <tr class="spacer"></tr>
 
-                    <tr col-span=2>
-                        <td class="hint">***避免计算冲突：以下五项只可填选一项</td>
+                    <tr>
+                        <td class="hint" colspan=2>***避免计算冲突：以下五项只可填选一项</td>
                     </tr>
                     <tr class="spacer"></tr>
 
