--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about.html">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+	        	<li><a href="/data/about.html">About</a></li>
+        		<li><a href="/data/Gavin(ChuWen)Tang_Resume.pdf">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
 			<li><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
     		</ul>
