--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Gavin!</h1>
+        		<h1>
+					<img src="https://media-exp1.licdn.com/dms/image/C5103AQHbGUFnBNai2g/profile-displayphoto-shrink_100_100/0?e=1608163200&v=beta&t=FePe4fHx4nweaupJ7C1JivV0W7YuVWlfFor3N3cX2KI">
+					Hi there, I'm Gavin!
+				</h1>
 				<!--<p>I am a passionate <a href="http://www.dota2.com"><em>Dota 2</em></a> and <a href="https://playhearthstone.com"><em>Hearthstone</em></a> player best known as the 5K noob and an Arena Maniac   
 					<span style="font-size:8px;"> (2x Arena Leaderboard - Top 100 NA) </span><a href="/about"></p>-->
 			<p>Read more about me</a></p>
@@ -25,8 +28,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:gt00unit@gmail.com">email</a></li>
-        		<li><a href="https://github.com/cw2tang">github.com/cw2tang</a></li>
+        		<li><a href="mailto:gt00unit@gmail.com">Email</a></li>
+				<li><a href="https://github.com/cw2tang">GitHub</a></li>
+				<li><a href="www.linkedin.com/in/chu-wen-gavin-tang">LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
