--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	        	<li><a href="/data/about.html">About</a></li>
         		<li><a href="/data/Gavin(ChuWen)Tang_Resume.pdf">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
-				<li hidden><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
+				<li display:none><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
     		</ul>
 		</nav>
 		<div class="container">
