--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		
+	<video id="myVideo" playsinline="" autoplay="" muted="" loop="" poster="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/1263950/4178417cb716b1b4249b74295e1007c1304f92a5.jpg">
+		<source src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/1263950/1127f03c832f3ee0b2a51265e385828e2d910686.webm" type="video/webm">
+		<source src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/1263950/b31c14955cd9e39d704f7dfd36cb9cc2129d6fbc.mp4" type="video/mp4">
+	</video>
+	<div class="content">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/data/about.html">About</a></li>
         		<li><a href="/data/Gavin(ChuWen)Tang_Resume.pdf">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/steam_profile/index.js">Projects</a></li>
 				<li class="hide"><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
     		</ul>
 		</nav>
@@ -23,7 +29,12 @@
 				</h1>
 				<!--<p>I am a passionate <a href="http://www.dota2.com"><em>Dota 2</em></a> and <a href="https://playhearthstone.com"><em>Hearthstone</em></a> player best known as the 5K noob and an Arena Maniac   
 					<span style="font-size:8px;"> (2x Arena Leaderboard - Top 100 NA) </span><a href="/about"></p>-->
-			<p>Read more about me</a></p>
+				<p>I'm <script>document.write(new Date().getFullYear() - 1993)</script>, 
+					graduated from University of Waterloo in 2016 with Bachelor degree in Computer Science.
+					I am currently working at a Canada based tech company as Application Developer.</p>
+
+				<p>I'm a gamer who loves indie games, especially roguelites. <enlarge>(too old for competitve games)</enlarge></a></p>
+				<p>My favourite games from Steam profile</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
@@ -31,7 +42,9 @@
         		<li><a href="mailto:gt00unit@gmail.com">Email</a></li>
 				<li><a href="https://github.com/cw2tang">GitHub</a></li>
 				<li><a href="www.linkedin.com/in/chu-wen-gavin-tang">LinkedIn</a></li>
+				<li style="float: right; font-size: 6pt">Background image by Steam Trademark</li>
 			</ul>
 		</footer>
+	</div>
 	</body>
 </html>
