--- a/data/about.html
+++ b/data/about.html
@@ -7,8 +7,12 @@
 	<body>
 		<div class="container">
     		<div class="blurb">
-        		<h1>about me content...</h1>
-				<p></p>
+        		<h1></h1>
+				<p>
+					<b>Programming</b>	Python    Java    NodeJS    C++/C    VB/.NET    Shell(Bash)
+					<b>DB & Analytics</b>	SQL(SSMS)    MongoDB    VBA    Salesforce(certified)    Oracle Siebel/AIA
+					<b>Web Stack</b>	MEAN/MERN (MongoDB, Express, Angular/React, NodeJS)    HTML/CSS/Javascript
+				</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
