--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/data/about.html">About</a></li>
         		<li><a href="/data/Gavin(ChuWen)Tang_Resume.pdf">CV</a></li>
-        		<li><a href="/steam_profile/README">Projects</a></li>
+        		<li><a href="https://steamzero.herokuapp.com">Project</a></li>
 				<li class="hide"><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
     		</ul>
 		</nav>
