--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:gt00unit@gmail.com">Email</a></li>
+        		<li><a href="mailto:gavin.tang.2016@gmail.com">Email</a></li>
 				<li><a href="https://github.com/cw2tang">GitHub</a></li>
 				<li><a href="www.linkedin.com/in/chu-wen-gavin-tang">LinkedIn</a></li>
 				<li style="float: right; font-size: 6pt">Background image by Steam Trademark</li>
