--- a/data/about.html
+++ b/data/about.html
@@ -17,8 +17,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:gt00unit@gmail.com">email</a></li>
-        		<li><a href="https://github.com/cw2tang">github.com/cw2tang</a></li>
+        		<li><a href="mailto:gavin.tang.2016@gmail.com">Email</a></li>
+        		<li><a href="https://github.com/cw2tang">GitHub</a></li>
 			</ul>
 		</footer>
 	</body>
