--- a/data/about.html
+++ b/data/about.html
@@ -7,12 +7,17 @@
 	<body>
 		<div class="container">
     		<div class="blurb">
-        		<h1></h1>
+        		<h1>About Me</h1>
 				<p>
 					<b>Programming</b>	Python    Java    NodeJS    C++/C    VB/.NET    Shell(Bash)
+				</p>
+				<p>
 					<b>DB & Analytics</b>	SQL(SSMS)    MongoDB    VBA    Salesforce(certified)    Oracle Siebel/AIA
+				</p>
+				<p>
 					<b>Web Stack</b>	MEAN/MERN (MongoDB, Express, Angular/React, NodeJS)    HTML/CSS/Javascript
 				</p>
+				
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
