--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 					I am currently working at a Canada based tech company as Application Developer.</p>
 
 				<p>I'm a gamer who loves indie games, especially roguelites. <enlarge>(too old for competitve games)</enlarge></a></p>
-				<p>My favourite games from Steam profile</p>
+				<p>I'm currently working on a side project as hobby that will notify subscribed users (via email) for any free game giveaways on Steam.
+					The website (in beta) can be found at Project.
+				</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
