--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 				<!--<p>I am a passionate <a href="http://www.dota2.com"><em>Dota 2</em></a> and <a href="https://playhearthstone.com"><em>Hearthstone</em></a> player best known as the 5K noob and an Arena Maniac   
 					<span style="font-size:8px;"> (2x Arena Leaderboard - Top 100 NA) </span><a href="/about"></p>-->
 				<p>I'm <script>document.write(new Date().getFullYear() - 1993)</script>, 
-					graduated from University of Waterloo in 2016 with Bachelor degree in Computer Science.
-					I am currently working at a Canada based tech company as Application Developer.</p>
+					graduated from University of Waterloo in 2016 with Bachelor degree in Computer Science, 
+					currently working at a Canada based tech company as Application Developer.</p>
 
 				<p>I'm a gamer who loves indie games, especially roguelites. <enlarge>(too old for competitve games)</enlarge></a></p>
 				<p>I'm currently working on a side project as hobby that will notify subscribed users (via email) for any free game giveaways on Steam.
-					The website (in beta) can be found at Project.
+					The website (in beta) can be found <b><a href="https://steamzero.herokuapp.com">here</a></b>.
 				</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
