--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	        	<li><a href="/data/about.html">About</a></li>
         		<li><a href="/data/Gavin(ChuWen)Tang_Resume.pdf">CV</a></li>
         		<li><a href="https://steamzero.herokuapp.com">Project</a></li>
-				<li class="hide"><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
+			<li class="hide"><a href="/cost_calculator/costcalc.html">Cost Calculator</a></li>
+			<li class="hide"><a href="/elo_calculator/calculate.html">Elo Calculator</a></li>
     		</ul>
 		</nav>
 		<div class="container">
