--- a/elo_calculator/calculate.html
+++ b/elo_calculator/calculate.html
@@ -8,7 +8,12 @@
 	<br><input id="elob" placeholder="Elo B"></input>
 	<br><button id="go">Calculate</button>
 	<div id="pct"></div>
-
+	<br><br>
+	<h3>Kelly Calculator</h3>
+	<input id="odd" placeholder="Decimal Odds"></input>
+	<br><input id="win" placeholder="Win Percentage"></input>
+	<br><button id="gokelly">Calculate</button>
+	<div id="stake"></div>
 </div>
 
 <script>
@@ -18,17 +23,24 @@
 		var pct = 1 - 1 / (1 + Math.pow(10, (eloa-elob)/400));
 		var format = Math.round(pct * 10000) / 100
 		var simple = Math.round(1 / pct * 100) / 100
-		document.getElementById("pct").innerHTML ="<br><br>Win rate A:<br>" + format + "% (1 in " + simple + ")";
+		document.getElementById("pct").innerHTML ="<br>Win rate A:<br>" + format + "% (1 in " + simple + ")";
+		document.getElementById("win").value = format;
+	}
+	
+	function calckelly() {
+		var odd = document.getElementById("odd").value;
+		var win = document.getElementById("win").value;
+		var stake = ((win / 100) * (odd - 1) - ((100 - win) / 100)) / (odd - 1);
+		var format = Math.round(stake * 10000) / 100
+		document.getElementById("stake").innerHTML ="<br>Stake %:<br>" + format + "<br>A negative percentage implies that you should not wager on this outcome.";
 	}
 
 	document.getElementById("go").onclick = function() {
 		calc();
 	}
-
-	window.onkeyup = function(e) {
-		if (e.keyCode == 13 /*enter*/) {
-			calc();
-		}
+	
+	document.getElementById("gokelly").onclick = function() {
+		calckelly();
 	}
 
 	document.documentElement.style.overflow = 'hidden';
